--- a/vignettes/taxa.Rmd
+++ b/vignettes/taxa.Rmd
@@ -46,7 +46,7 @@ These taxa lists allow changes in the environment to be detected by applying con
 
 The combine taxa table for freshwater macro-invertebrates table is called INVERT-TAXON-DICTIONARY and is stored in the [macroinverebrateMetrics R pacakage](https://github.com/aquaMetrics/macroinvertebrateMetrics/blob/master/inst/extdat/INVERT-TAXON-DICTIONARY.csv). This table provides the basis for taxa lists used for various analysis levels including lists in the WFD100. Subsets of this table are provided to the Labware based LIMS and ESRI's Survey123 for data entry. 
 
-The taxa table held in macroinverebrateMetrics R package is a copy of previous table held in NEMS (predecessor to LIMS). 
+The INVERT-TAXON-DICTIONARY held in macroinverebrateMetrics R package is a copy of previous table held in NEMS (predecessor to LIMS). 
 
 # Implementor's Trap
 
@@ -55,7 +55,7 @@ In an ideal world, we would implement an globally managed list of taxa, identifi
 
 However, there are a number of independent sources of truth for taxa concepts. These are WFD100, NBN,  ECN  taxa lists and additionally independent taxa lists for some metrics (LAMM & AWIC etc). Furthermore, the identification keys are independently produced.
 
-To solve this implementation dilemma, we combine all these sources of truth into taxa table(s), managing the changes to keys, metrics, taxonomy and allowing conversion to NBN or ECN outputs. This can be a substantial implementation burden and repeated in similar way for other lists, for example diatoms, macrophytes and marine lists. 
+To solve this implementation dilemma, we combine all these sources of truth into a taxa table (INVERT-TAXON-DICTIONARY), managing the changes to keys, metrics, taxonomy and allowing conversion to NBN or ECN outputs. This can be a substantial implementation burden and repeated in similar way for other lists, for example diatoms, macrophytes and marine lists. 
 
 ### Summary of macroinvertebrate taxa data flow
 
