--- a/vignettes/taxa.Rmd
+++ b/vignettes/taxa.Rmd
@@ -53,9 +53,9 @@ The INVERT-TAXON-DICTIONARY held in macroinverebrateMetrics R package is a copy 
 Taxonomy, keys, metrics and data sharing standards are all independently produced by different organisations and a not maintained and updated in sync. 
 In an ideal world, we would implement an globally managed list of taxa, identification keys, metrics and reporting tools which a tightly aligned and consistent with each other and allow sharing of data with other partners. 
 
-However, there are a number of independent sources of truth for taxa concepts. These are WFD100, NBN,  ECN  taxa lists and additionally independent taxa lists for some metrics (LAMM & AWIC etc). Furthermore, the identification keys are independently produced.
+However, there are a number of independent sources of truth for taxa concepts. These are WFD100, NBN,  ECN and  metrics (LAMM & AWIC etc) taxa lists. Furthermore, the identification keys are independently produced.
 
-To solve this implementation dilemma, we combine all these sources of truth into a taxa table (INVERT-TAXON-DICTIONARY), managing the changes to keys, metrics, taxonomy and allowing conversion to NBN or ECN outputs. This can be a substantial implementation burden and repeated in similar way for other lists, for example diatoms, macrophytes and marine lists. 
+To solve this implementation dilemma, we combine all these sources of truth into a taxa table (INVERT-TAXON-DICTIONARY), and co-ordinate updates to keys, guidance, data entry, training and auditing as required. This is repeated in similar way for other lists, for example diatoms, macrophytes and marine lists. 
 
 ### Summary of macroinvertebrate taxa data flow
 
